Added V2 events - 1) Added wrapper methods for called BranchEvents for Custom actions and Standard Actions for iPhone and Android 7x. 2) Added examples in TestBed that call BranchEvents and pass test data. Verified logs and SDK classes that suggest proper working through Ti wrapper.

--- a/testbed/app/views/branchUniversal.xml
+++ b/testbed/app/views/branchUniversal.xml
@@ -3,7 +3,7 @@
         <View class="first-section">
             <Button class="first-section-btn first-layer menu-left" title="init BUO" id="initBranchButton"/>
             <Button class="first-section-btn first-layer menu-right" title="register View" id="registerViewButton"/>
-        </View>
+        </View> 
         <View class="second-section">
             <Button class="second-section-btn first-layer" title="generate Url" id="generateUrlButton"/>
             <Button class="second-section-btn second-layer" title="share Sheet" id="shareSheetButton"/>
@@ -12,6 +12,10 @@
         <View class="third-section">
             <TextArea class="third-section-textarea first-layer menu-left" id="linkTextArea"/>
             <Button class="third-section-btn first-layer" title="Copy to Clipboard" id="copyButton"/>
+            <Button class="third-section-btn second-layer menu-left" title="track custom event" id="customEventViewButton"/>
+            <Button class="third-section-btn second-layer menu-right" title="track std event" id="standardEventViewButton"/>
+        
         </View>
+       
     </Window>
 </Alloy>
